# Lochord

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: README.ja.md  README.ko.md  README.zh.md  design-metadata-editor.md  design-phase2-settings.md  design.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs  m3u.rs  mod.rs
src/application/store/: useLochordStore.ts  useSettingsStore.ts
src/application/usecases/: loadPlaylist.ts  savePlaylist.ts  scanLibrary.ts
src/domain/entities/: AppSettings.ts  AudioTags.ts  Playlist.ts  Track.ts
src/domain/i18n/: index.ts  types.ts
src/domain/i18n/translations/: en.ts  ja.ts  ko.ts  zh.ts
src/domain/rules/: m3uPathResolver.ts
src/infrastructure/repositories/: IPlaylistRepository.ts  PlaylistRepository.ts
src/infrastructure/tauri/: audioTagsAdapter.ts  fileSystemAdapter.ts  m3uAdapter.ts
src/presentation/components/AppIcon/: AppIcon.tsx
src/presentation/components/ConfirmDialog/: ConfirmDialog.tsx
src/presentation/components/LibraryBrowser/: LibraryBrowser.tsx
src/presentation/components/MetadataEditor/: MetadataEditor.tsx
src/presentation/components/PlaylistPanel/: PlaylistPanel.tsx
src/presentation/components/SettingsModal/: SettingsModal.tsx
src/presentation/hooks/: useRubberBandSelect.ts  useTheme.ts  useTranslation.ts
src/presentation/pages/: MainPage.tsx  OnboardingPage.tsx
(+1 files in other folders)
