[package]
name = "lochord"
version = "0.1.0"
description = "Local music library M3U8 playlist manager"
authors = []
edition = "2021"

[lib]
name = "lochord_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
lofty = "0.22"
base64 = "0.22"

